--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,19 @@
   bottom: 0;
   width: 100%;
 }
+.card-body {
+  background-color: #a7c7e7;
+}
+
+.movingCards {
+  animation: slide 60s linear infinite;
+}
+
+@keyframes slide {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  100% {
+    transform: translate3d(-1500px, 0, 0); /* The image width */
+  }
+}
